fixtures/frontend/milestone-2/valid/source-decorator-signals/main.aivi
type HttpError =
  | Timeout
  | DecodeFailure Text

type User = {
    id: Int,
    name: Text
}

type DecodeMode =
  | Strict
  | Permissive

domain Duration over Int
    literal s : Int -> Duration

domain Repeat over Int
    literal x : Int -> Repeat

sig apiHost = "https://api.example.com"

@source http.get "{apiHost}/users" with {
    decode: Strict,
    retry: 3x,
    timeout: 5s
}
sig users : Signal (Result HttpError (List User))

@source timer.every 120 with {
    immediate: True,
    coalesce: True
}
sig tick : Signal Unit
